# Batch-Settling

./: .gitignore  README.md  pyproject.toml  resultadosPreliminares.csv
MVF/: NewtonianFluid.py  PowerLawFluid.py  RK4Validation.py  RelaxingPowerLaw.py  RochaData.xlsx  StudyCases.py  animation.py  cythonExtension.py  malhaDesloacada_Rocha_2020.py  performanceTest.py  primes_python.py  resultadosPreliminares.csv  script_GL_92.c  script_GL_92.cp38-win32.pyd  script_GL_92.html  script_GL_92.pyx  script_Pinto.c  script_Pinto.cp38-win32.pyd  script_Pinto.html  script_Pinto.pyx  script_Rocha_2020.c  script_Rocha_2020.cp38-win32.pyd  script_Rocha_2020.cp39-win_amd64.pyd  script_Rocha_2020.html  script_Rocha_2020.pyx  script_Rocha_2020_python.py  script_Rocha_comparison.py
MVF/temporaryFiles/: resultadosPreliminares.csv  resultadosPreliminaresDia1.csv  resultadosPreliminaresDia10.csv  resultadosPreliminaresDia11.csv  resultadosPreliminaresDia12.csv  resultadosPreliminaresDia13.csv  resultadosPreliminaresDia14Backup_deltaT10-3.csv  resultadosPreliminaresDia2.csv  resultadosPreliminaresDia3.csv  resultadosPreliminaresDia4.csv  resultadosPreliminaresDia5.csv  resultadosPreliminaresDia5Backup.csv  resultadosPreliminaresDia6.csv  resultadosPreliminaresDia7.csv  resultadosPreliminaresDia8.csv  resultadosPreliminaresDia9.csv
